fix sidebar layout issue with position

--- a/html.css
+++ b/html.css
@@ -1,3 +1,7 @@
+main{
+  
+}
+
 #advertisement{
   display: flex;
     flex-direction: column;
@@ -16,7 +20,9 @@
   background-color: #e7e9eb;
   direction: rtl;
   overflow-y: scroll;
+  height:628px;
   font-family: "Pinar-Medium";
+  position: fixed;
   
 }
 #sidebar p{
@@ -55,6 +61,7 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-right: 230px;
   
 }
 #advertisement-banner{
